# data-processing-toolkit

./: README.md
data-processing-toolkit/: pyproject.toml
data-processing-toolkit/data_processing_toolkit/: slicer.py
data-processing-toolkit/tests/: test_slicer.py
