[tool.poetry]
name = "data-processing-toolkit"
version = "0.1.0"
description = ""
authors = ["Dmitriy Peskov <dmitriy_peskov@ozon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.development.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
